update user paging
